Update Airtable integration details in index.html

--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@
         const apiKey = ""; 
 
         // =======================================================
-        // AIRTABLE ENTEGRASYON BİLGİLERİ (Kendi bilgilerinizle değiştirin!)
+        // AIRTABLE ENTEGRASYON BİLGİLERİ
         // =======================================================
         const AIRTABLE_API_KEY = "YOUR_AIRTABLE_API_KEY";
         const AIRTABLE_BASE_ID = "YOUR_AIRTABLE_BASE_ID";
-        const AIRTABLE_TABLE_NAME = "MiniGameScores";
+        const AIRTABLE_TABLE_NAME = "nft_list";
 
         // =======================================================
         // OYUN KONFİGÜRASYONU VE DEĞİŞKENLER
