--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         // =======================================================
         // MAKE (ESKİ ADIYLA INTEGROMAT) WEBHOOK URL'NİZ BURAYA GELİYOR
         // =======================================================
-        const MAKE_WEBHOOK_URL = "YOUR_WEBHOOK_URL"; // Burayı kendi Make webhook URL'nizle değiştirin
+        const MAKE_WEBHOOK_URL = "https://hook.eu2.make.com/yn48igw9lmjva43ce46yr5231qfi9mtr"; // Burayı kendi Make webhook URL'nizle değiştirin
 
         // =======================================================
         // OYUN KONFİGÜRASYONU VE DEĞİŞKENLER
