--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             padding-top: max(1rem, env(safe-area-inset-top)); /* min 1rem, veya safe area kadar */
             padding-bottom: max(1rem, env(safe-area-inset-bottom)); /* min 1rem, veya safe area kadar */
             
-            /* Genişliği 100% yap ve maksimum genişlik sınırı kaldır */
+            /* Genişliği 100% yap, ancak maksimum genişliği kısıtla */
             width: 100%; 
-            max-width: none; /* Önceki kısıtlamayı kaldır */
+            max-width: 420px; /* WEB/MASAÜSTÜ İÇİN MAKSİMUM GENİŞLİK */
+            margin: 0 auto; /* ORTALAMA */
         }
 
         /* --- TEMA RENKLERİ --- */
